[package]
name = "cah_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.30"
rand = "0.8.5"
sea-orm = { version = "0.12.10", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tgbot = "0.20.0"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[dev-dependencies]
sea-orm = { version = "0.12.10", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls", "mock"] }
