[package]
name = "cah_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
futures-util = "0.3.30"
rand = "0.8.5"
sea-orm = { version = "0.12.14", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tgbot = "0.21.0"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[dev-dependencies]
sea-orm = { version = "0.12.14", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls", "mock"] }
